// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptFilters rendering tests PromptFilters - filterContext null - test 1`] = `<div />`;

exports[`PromptFilters rendering tests PromptFilters - reset btn disabled - rendered test 1`] = `
<div>
  <div
    class="animate-in border-b border-slate-200/80 bg-white px-5 pt-1 pb-3 duration-200 slide-in-from-top-4"
    data-testid="prompts-filter"
  >
    <div
      class="flex items-center justify-end pb-1"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-slate-600 hover:bg-slate-100 hover:text-slate-900"
        data-slot="button"
        data-testid="reset-btn"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-ccw mr-1.5 h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        <span
          class="text-xs font-medium"
        >
          Zurücksetzen
        </span>
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="space-y-2"
        data-testid="search-filter"
      >
        <label
          class="text-sm font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Suchbegriff
        </label>
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 h-9 min-w-0 px-3 outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 pr-4 py-2.5 bg-slate-50/50 border border-slate-200 rounded-lg text-sm text-slate-900 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:border-blue-400 focus:bg-white transition-all shadow-sm"
            data-slot="input"
            data-testid="search-input"
            id="search-prompts"
            placeholder="Nach Titel suchen..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="space-y-2"
        data-testid="categories-filter"
      >
        <label
          class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
          data-testid="filter-label"
        >
          Kategorien
        </label>
        <div
          data-slot="popover"
          data-testid="mock-react-popover-root"
        >
          <div
            class="min-h-[42px] w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
            data-slot="popover-trigger"
            data-testid="popover-trigger"
          >
            <span
              class="text-sm text-slate-400"
              data-testid="no-selected-category"
            >
              Kategorien auswählen...
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 15 5 5 5-5"
              />
              <path
                d="m7 9 5-5 5 5"
              />
            </svg>
          </div>
          <div
            data-testid="mock-react-popover-portal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptFilters rendering tests PromptFilters - reset btn enabled - rendered test 1`] = `
<div>
  <div
    class="animate-in border-b border-slate-200/80 bg-white px-5 pt-1 pb-3 duration-200 slide-in-from-top-4"
    data-testid="prompts-filter"
  >
    <div
      class="flex items-center justify-end pb-1"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-slate-600 hover:bg-slate-100 hover:text-slate-900"
        data-slot="button"
        data-testid="reset-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-ccw mr-1.5 h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        <span
          class="text-xs font-medium"
        >
          Zurücksetzen
        </span>
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="space-y-2"
        data-testid="search-filter"
      >
        <label
          class="text-sm font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Suchbegriff
        </label>
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 h-9 min-w-0 px-3 outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 pr-4 py-2.5 bg-slate-50/50 border border-slate-200 rounded-lg text-sm text-slate-900 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:border-blue-400 focus:bg-white transition-all shadow-sm"
            data-slot="input"
            data-testid="search-input"
            id="search-prompts"
            placeholder="Nach Titel suchen..."
            type="text"
            value="test search"
          />
        </div>
      </div>
      <div
        class="space-y-2"
        data-testid="categories-filter"
      >
        <label
          class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
          data-testid="filter-label"
        >
          Kategorien
        </label>
        <div
          data-slot="popover"
          data-testid="mock-react-popover-root"
        >
          <div
            class="min-h-[42px] w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
            data-slot="popover-trigger"
            data-testid="popover-trigger"
          >
            <span
              class="text-sm text-slate-400"
              data-testid="no-selected-category"
            >
              Kategorien auswählen...
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 15 5 5 5-5"
              />
              <path
                d="m7 9 5-5 5 5"
              />
            </svg>
          </div>
          <div
            data-testid="mock-react-popover-portal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
